Update registration service and complete test cases