@@ -1,14 +1,16 @@
 package vn.edu.crs.course_service.service;
 
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
 import vn.edu.crs.course_service.dto.CourseDTO;
 import vn.edu.crs.course_service.entity.Course;
 import vn.edu.crs.course_service.repository.CourseRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,11 +18,9 @@ public class CourseService {
 
     private final CourseRepository courseRepository;
 
+    // --- Các phương thức cũ từ Buổi 2 ---
     public List<CourseDTO> getAll() {
-        return courseRepository.findAll()
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+        return courseRepository.findAll().stream().map(this::toDTO).toList();
     }
 
     public CourseDTO getById(Long id) {
@@ -37,7 +37,7 @@ public class CourseService {
         course.setTenMonHoc(dto.getTenMonHoc());
         course.setSoTinChi(dto.getSoTinChi());
         course.setSoChoToiDa(dto.getSoChoToiDa());
-        course.setSoChoConLai(dto.getSoChoToiDa()); // Số chỗ còn lại mặc định bằng số chỗ tối đa khi tạo mới
+        course.setSoChoConLai(dto.getSoChoToiDa());
         return toDTO(courseRepository.save(course));
     }
 
@@ -57,13 +57,46 @@ public class CourseService {
         courseRepository.deleteById(id);
     }
 
+    // --- THÊM MỚI BUỔI 3 ---
+
+    // Search + Phân trang
+    public Page<CourseDTO> search(String keyword, Pageable pageable) {
+        Page<Course> page = (keyword == null || keyword.isBlank())
+                ? courseRepository.findAll(pageable)
+                : courseRepository.findByTenMonHocContainingIgnoreCase(keyword, pageable);
+        return page.map(this::toDTO);
+    }
+
+    // Trừ chỗ
+    @Transactional
+    public CourseDTO reserveSeat(Long courseId) {
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new NoSuchElementException("Khong tim thay mon hoc id = " + courseId));
+        if (course.getSoChoConLai() <= 0) {
+            throw new IllegalStateException("Mon hoc da het cho, khong the dang ky");
+        }
+        course.setSoChoConLai(course.getSoChoConLai() - 1);
+        return toDTO(courseRepository.save(course));
+    }
+
+    // Hoàn chỗ
+    @Transactional
+    public CourseDTO releaseSeat(Long courseId) {
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new NoSuchElementException("Khong tim thay mon hoc id = " + courseId));
+        if (course.getSoChoConLai() < course.getSoChoToiDa()) {
+            course.setSoChoConLai(course.getSoChoConLai() + 1);
+        }
+        return toDTO(courseRepository.save(course));
+    }
+
     private CourseDTO toDTO(Course course) {
-        return new CourseDTO(
-                course.getId(),
-                course.getTenMonHoc(),
-                course.getSoTinChi(),
-                course.getSoChoToiDa(),
-                course.getSoChoConLai()
-        );
+        CourseDTO dto = new CourseDTO();
+        dto.setId(course.getId());
+        dto.setTenMonHoc(course.getTenMonHoc());
+        dto.setSoTinChi(course.getSoTinChi());
+        dto.setSoChoToiDa(course.getSoChoToiDa());
+        dto.setSoChoConLai(course.getSoChoConLai());
+        return dto;
     }
 }
